cheaged registerUser a bit

--- a/src/app/login/register/registration-confirmation/registration-confirmation.component.html
+++ b/src/app/login/register/registration-confirmation/registration-confirmation.component.html
@@ -1,1 +1,6 @@
-<p>Please check you email</p>
+<p>
+  Dear <b>{{ userService.user_name }}</b>, 
+  plieace go to yourt email <b>{{ userService.user_email }}</b> inbox and click on recieved
+  activation link ro confirm and complete your registration. <b>Note:</b> Check
+  your spam folder!
+</p>
