--- a/src/app/landingpage/login/register/register.component.scss
+++ b/src/app/landingpage/login/register/register.component.scss
@@ -1,6 +1,6 @@
 @import './../../../../styles.scss';
 
-section{
+section {
     height: 100dvh;
     width: 100vw;
     @include dFlex($j: space-between);
@@ -10,16 +10,18 @@ section{
     background-position: center;
 }
 
-.headerDiv{
+.headerDiv {
     @include dFlex($j: space-between);
     padding: 3rem;
     width: calc(100% - 6rem);
-    img{
+
+    img {
         width: 20rem;
         height: auto;
         object-fit: contain;
     }
-    .loginBtn{
+
+    .loginBtn {
         color: whitesmoke;
         background-color: $btnColor;
         padding: 26px;
@@ -30,84 +32,134 @@ section{
         font-size: larger;
         cursor: pointer;
         transition: ease-in-out 0.3s;
-        &:hover{
+
+        &:hover {
             background-color: whitesmoke;
-            color: #2E3EDF;
+            color: $btnColor;
         }
     }
 }
 
-.contentDiv{
+.contentDiv {
     @include dFlex($j: space-between, $g: 16px);
     flex-direction: column;
     background-color: white;
     border-radius: 25px;
-    padding: 3rem;
-    h1{
+    padding: 2rem;
+    min-width: 400px;
+    h1 {
         font-size: 3.5em;
         margin: 0;
         margin-bottom: 0.5rem;
-        color: #2E3EDF;
+        color: $btnColor;
     }
-    input{
-        padding: 12px;
-        padding-left: 16px;
-        padding-right: 16px;
-        border: 1px solid #2E3EDF;
-        border-radius: 30px;
-        outline: none;
-        font-size: larger;
-        min-width: 400px;
-    }
-    button{
-        margin-top: 1.2rem;
-        color: whitesmoke;
-        background-color: $btnColor;
-        padding: 26px;
-        padding-top: 12px;
-        padding-bottom: 12px;
-        border: none;
-        border-radius: 40px;
-        font-size: larger;
-        border: 1px solid #2E3EDF;
-        cursor: pointer;
-        transition: ease-in-out 0.3s;
-        &:hover{
-            background-color: white;
-            color: #2E3EDF;
+    .positionInputs{
+        @include dFlex($a: start, $g: 16px);
+        flex-direction: column;
+        width: 100%;
+        .normalInput {
+            padding: 12px;
+            padding-left: 16px;
+            padding-right: 16px;
+            border: 1px solid $btnColor;
+            border-radius: 30px;
+            outline: none;
+            font-size: larger;
+            width: calc(100% - 2rem);
+            color: $btnColor;
         }
     }
 }
 
-.passwortImg{
+.submitBtn {
+    margin-top: 1.2rem;
+    color: whitesmoke;
+    background-color: $btnColor;
+    padding: 26px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    border: none;
+    border-radius: 40px;
+    font-size: larger;
+    border: 1px solid $btnColor;
+    cursor: pointer;
+    transition: ease-in-out 0.3s;
+
+    &:hover {
+        background-color: #0919ce;
+        color: white;
+    }
+}
+
+.submitBtnDisabled {
+    margin-top: 1.2rem;
+    color: $btnColor;
+    background-color: white;
+    padding: 26px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    border: none;
+    border-radius: 40px;
+    font-size: larger;
+    border: 1px solid $btnColor;
+    transition: ease-in-out 0.3s;
+}
+
+.invalidFeedback{
     width: 100%;
-    input{
+    @include dFlex($j: flex-start, $g: 16px);
+    color: red;
+    img{
+        margin-left: 16px;
+        margin-right: 16px;
+    }
+}
+
+::placeholder {
+    color: $btnColor;
+    opacity: 1;
+    /* Firefox */
+}
+
+::-ms-input-placeholder {
+    /* Edge 12-18 */
+    color: $btnColor;
+}
+
+.passwortImg {
+    width: 100%;
+    @include dFlex($j: flex-start);
+    .passwordInput {
         padding: 12px;
         padding-left: 16px;
         padding-right: 48px;
-        border: 1px solid #2E3EDF;
+        border: 1px solid $btnColor;
         border-radius: 30px;
         outline: none;
         font-size: larger;
-        min-width: 368px
+        width: calc(100% - 4rem);
+        color: $btnColor;
     }
-    img{
+
+    img {
         margin-left: -40px;
         cursor: pointer;
     }
 }
 
 
-footer{
+footer {
     width: 100%;
     margin: 2rem;
     @include dFlex($g: 80px);
-    span{
+
+    span {
         cursor: pointer;
         font-size: 1.2rem;
         transition: ease-in-out 0.3s;
         color: white;
-        &:hover{
+
+        &:hover {
             color: $btnColor;
         }
     }
