--- a/src/app/landingpage/login/register/registration-confirmation/registration-confirmation.component.html
+++ b/src/app/landingpage/login/register/registration-confirmation/registration-confirmation.component.html
@@ -1,6 +1,20 @@
-<p>
-  Dear <b>{{ userService.user_name }}</b>, 
-  plieace go to yourt email <b>{{ userService.user_email }}</b> inbox and click on recieved
-  activation link ro confirm and complete your registration. <b>Note:</b> Check
-  your spam folder!
-</p>
+<section>
+  <div class="headerDiv">
+    <img src="../../../assets/img/Logo.svg" alt="Logo">
+    <button [routerLink]="['/login']" class="loginBtn">Log in</button>
+  </div>
+
+  <div class="textDiv">
+    <p>
+      Dear <b>{{ userService.user_name }}</b>, 
+      plieace go to yourt email <b>{{ userService.user_email_copy }}</b> inbox and click on recieved
+      activation link ro confirm and complete your registration.<br>
+      <b>Note:</b> Check your spam folder!
+    </p>
+  </div>
+
+  <footer>
+    <span [routerLink]="['/privacy_policy']">Datenschutz</span>
+    <span [routerLink]="['/imprint']">Impressum</span>
+  </footer>
+</section>
