--- a/src/app/landingpage/login/login.component.html
+++ b/src/app/landingpage/login/login.component.html
@@ -5,7 +5,7 @@
         <input type="password" name="" id="" [(ngModel)]="password">
     </div>
     <div class="input_button_box">
-        <button>Login</button>
-        <button>Guest login</button>
+        <button (click)="login()">Login</button>
+        <button (click)="guestLogin()">Guest login</button>
     </div>
 </section>
