started style videoside

--- a/src/app/landingpage/video-site/video-site.component.html
+++ b/src/app/landingpage/video-site/video-site.component.html
@@ -1,1 +1,22 @@
-<p>video-site works!</p>
+<video autoplay muted loop id="myVideo" class="backgroundVideo">
+    <source src="../../../assets/videos/Breakout.mp4" type="video/mp4">
+</video>
+<section>
+    <header>
+        <img src="../../../assets/img/logo_small.svg" alt="logo" />
+        <button class="blueBtn"><img src="../../../assets/icons/logout.svg" alt="" />Log out</button>
+    </header>
+
+    <div class="descriptionDivBreakout">
+        <h1>Breakout</h1>
+        <span>
+            In a high-security prison, a wrongly convicted man formulates a
+            meticulous plan to break out and prove his innocence. He must navigate a
+            web of alliances and betrayals to reclaim his freedom and expose the
+            truth.
+        </span>
+        <button class="blueBtn"><img src="../../../assets/icons/play_arrow.svg" alt="">Play</button>
+    </div>
+    
+    <div class="videoDiv"></div>
+</section>
