stylefix - video - landingpage

--- a/src/app/landingpage/video-site/video-site.component.html
+++ b/src/app/landingpage/video-site/video-site.component.html
@@ -1,9 +1,17 @@
-<video autoplay muted loop id="myVideo" class="backgroundVideo">
+<div class="videoPlayerBox">
+    <video autoplay muted loop id="myVideo" class="backgroundVideo">
+        <source src="../../../assets/videos/Breakout.mp4" type="video/mp4">
+    </video>
+    <div class="shadow"></div>
+</div>
+
+
+<!-- <video autoplay muted loop id="myVideo" class="backgroundVideo">
     <source src="../../../assets/videos/Breakout.mp4" type="video/mp4">
-</video>
+</video> -->
 <section>
     <header>
-        <img src="../../../assets/img/logo_small.svg" alt="logo" />
+        <img src="../../../assets/img/logo_small.svg" alt="logo" class="logo"/>
         <button class="blueBtn"><img src="../../../assets/icons/logout.svg" alt="" />Log out</button>
     </header>
 
