--- a/src/app/landingpage/video-site/video-site.component.scss
+++ b/src/app/landingpage/video-site/video-site.component.scss
@@ -3,16 +3,33 @@
 section{
     width: 100%;
     height: auto;
-    background-color: #030303;
+    background-color: #060606;
 }
 
-.backgroundVideo{
+.videoPlayerBox {
+    @include dFlex();
     width: 100%;
-    height: 100dvh;
+    height: 80dvh;
     position: absolute;
+    flex-direction: column;
     top: 0;
     right: 0;
     object-fit: cover;
+    overflow: hidden;
+    .backgroundVideo {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .shadow {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        box-shadow: inset 0px -62px 80px 0px rgba(0, 0, 0, 0.80);
+        top: 0;
+        left: 0;
+        z-index: 1;
+    }
 }
 
 
@@ -28,6 +45,7 @@ section{
     font-size: large;
     cursor: pointer;
     transition: ease-in-out 0.3s;
+    z-index: 2;
     &:hover {
         background-color: white;
         color: $btnColor;
@@ -43,6 +61,9 @@ header{
     padding: 1rem;
     width: calc(100% - 2rem);
     position: absolute;
+    .logo{
+        z-index: 2;
+    }
 }
 
 
@@ -63,6 +84,7 @@ header{
         font-size: large;
     }
 }
+
 
 .videoDiv{
     width: 20px;
