able to fetsh videodata

--- a/src/app/landingpage/video-site/video-site.component.html
+++ b/src/app/landingpage/video-site/video-site.component.html
@@ -32,27 +32,35 @@
     <div class="videoDiv">
         <div>
             <h1>New on Videoflix</h1>
-            @for (video of newVideos; track $index) {
-                <app-video-preview></app-video-preview>
-            }
+            <div>
+                @for (video of newVideos; track $index) {
+                    <app-video-preview></app-video-preview>
+                }
+            </div>
         </div>
         <div>
             <h1>Category 1</h1>
-            @for (video of newVideos; track $index) {
-                <app-video-preview></app-video-preview>
-            }
+            <div>
+                @for (video of newVideos; track $index) {
+                    <app-video-preview></app-video-preview>
+                }
+            </div>
         </div>
         <div>
             <h1>Category 2</h1>
-            @for (video of newVideos; track $index) {
-                <app-video-preview></app-video-preview>
-            }
+            <div>
+                @for (video of newVideos; track $index) {
+                    <app-video-preview></app-video-preview>
+                }
+            </div>
         </div>
         <div>
             <h1>Category 3</h1>
-            @for (video of newVideos; track $index) {
-                <app-video-preview></app-video-preview>
-            }
+            <div>
+                @for (video of newVideos; track $index) {
+                    <app-video-preview></app-video-preview>
+                }
+            </div>
         </div>
     </div>
 </section>
