add shared fodler and components

--- a/src/app/landingpage/login/register/register.component.html
+++ b/src/app/landingpage/login/register/register.component.html
@@ -1,8 +1,10 @@
 <section>
-    <div class="headerDiv">
+    <!-- <div class="headerDiv">
         <img src="../../assets/img/Logo.svg" alt="Logo">
         <button [routerLink]="['/login']" class="loginBtn">Log in</button>
-    </div>
+    </div> -->
+
+    <app-header></app-header>
 
     <form class="contentDiv" (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
         <h1>Sing Up</h1>
@@ -81,9 +83,10 @@
         </div>
         <button type="submit" class="submitBtn" [ngClass]="{'submitBtn': checkAllInputs(), 'submitBtnDisabled': !checkAllInputs()}" [disabled]="!checkAllInputs()">Get started</button>
     </form>
-
-    <footer>
+    <app-footer></app-footer>
+    <!-- <footer>
         <span [routerLink]="['/privacy_policy']">Datenschutz</span>
         <span [routerLink]="['/imprint']">Impressum</span>
-    </footer>
+    </footer> -->
+   
 </section>
