display video imgs

--- a/src/app/landingpage/video-site/video-preview/video-preview.component.html
+++ b/src/app/landingpage/video-site/video-preview/video-preview.component.html
@@ -1,1 +1,6 @@
-<p>video-preview works!</p>
+<section (mouseenter)="shwowDescription()" (mouseleave)="hideDescription()">
+    <img src="{{ video.screenshot }}" alt="">
+    <div class="descriptionBox" [ngClass]="{ 'descriptionVisible' : isDescriptionVisible, 'descriptionHide' : !isDescriptionVisible }">
+        <span>{{ video.description }}</span>
+    </div>
+</section>
