--- a/src/app/landingpage/video-site/video-site.component.html
+++ b/src/app/landingpage/video-site/video-site.component.html
@@ -30,36 +30,46 @@
     </div>
     
     <div class="videoDiv">
-        <div>
-            <h1>New on Videoflix</h1>
-            <div>
-                @for (video of newVideos; track $index) {
-                    <app-video-preview></app-video-preview>
-                }
+        <div class="videoDiv2">
+            <div class="videoPosition">
+                <h1>New on Videoflix</h1>
+                <div class="video4LoopBox">
+                    @for (video of newVideos; track $index) {
+                        <app-video-preview
+                            [video]="video"
+                        ></app-video-preview>
+                    }
+                </div>
             </div>
-        </div>
-        <div>
-            <h1>Category 1</h1>
-            <div>
-                @for (video of newVideos; track $index) {
-                    <app-video-preview></app-video-preview>
-                }
+            <div class="videoPosition">
+                <h1>Category 1</h1>
+                <div class="video4LoopBox">
+                    @for (video of newVideos; track $index) {
+                        <app-video-preview
+                            [video]="video"
+                        ></app-video-preview>
+                    }
+                </div>
             </div>
-        </div>
-        <div>
-            <h1>Category 2</h1>
-            <div>
-                @for (video of newVideos; track $index) {
-                    <app-video-preview></app-video-preview>
-                }
+            <div class="videoPosition">
+                <h1>Category 2</h1>
+                <div class="video4LoopBox">
+                    @for (video of newVideos; track $index) {
+                        <app-video-preview
+                            [video]="video"
+                        ></app-video-preview>
+                    }
+                </div>
             </div>
-        </div>
-        <div>
-            <h1>Category 3</h1>
-            <div>
-                @for (video of newVideos; track $index) {
-                    <app-video-preview></app-video-preview>
-                }
+            <div class="videoPosition">
+                <h1>Category 3</h1>
+                <div class="video4LoopBox">
+                    @for (video of newVideos; track $index) {
+                        <app-video-preview
+                            [video]="video"
+                        ></app-video-preview>
+                    }
+                </div>
             </div>
         </div>
     </div>
