--- a/src/app/landingpage/login/register/registration-confirmation/registration-confirmation.component.html
+++ b/src/app/landingpage/login/register/registration-confirmation/registration-confirmation.component.html
@@ -1,8 +1,5 @@
 <section>
-  <div class="headerDiv">
-    <img src="../../../assets/img/Logo.svg" alt="Logo">
-    <button [routerLink]="['/login']" class="loginBtn">Log in</button>
-  </div>
+<app-header></app-header>
 
   <div class="textDiv">
     <p>
@@ -13,8 +10,5 @@
     </p>
   </div>
 
-  <footer>
-    <span [routerLink]="['/privacy_policy']">Datenschutz</span>
-    <span [routerLink]="['/imprint']">Impressum</span>
-  </footer>
+  <app-footer></app-footer>
 </section>
