added normal user logout

--- a/src/app/landingpage/video-site/video-site.component.html
+++ b/src/app/landingpage/video-site/video-site.component.html
@@ -15,7 +15,7 @@
               <button class="headerBtns">Profile</button>
             </div>
         </div>
-        <button class="blueBtn"><img src="../../../assets/icons/logout.svg" alt="" />Log out</button>
+        <button class="blueBtn" (click)="logout()"><img src="../../../assets/icons/logout.svg" alt="log out img"/>Log out</button>
     </header>
 
     <div class="descriptionDivBreakout">
