--- a/src/app/landingpage/login/password-reset/password-reset.component.html
+++ b/src/app/landingpage/login/password-reset/password-reset.component.html
@@ -1,1 +1,47 @@
-<p>password-reset works!</p>
+<section>
+    <app-header></app-header>
+
+    <form class="contentDiv" (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
+        <h1>Sing Up</h1>
+        <div class="positionInputs">
+            <!----Password------>
+            <div class="passwortImg">
+                <input [type]="passwordFieldType" [(ngModel)]="password" placeholder="Password" name="firstPassword" #firstPassword="ngModel" required class="passwordInput">
+                <img src="../../assets/img/blue_eye.svg" alt="eye image" (click)="togglePasswordVisibility()">
+            </div>
+            @if (!checkPassword() &&firstPassword.touched) {
+                <div class="invalidFeedback">
+                    @if (password == ''){
+                        <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Password is required</span>
+                    } @else if(!checkPassword()) {
+                        <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Password should have at least 5 characters</span>
+                    } 
+                </div>
+            }
+
+            <!----Confirm Password------>
+            <div class="passwortImg">
+                <input [type]="confirmPasswordFieldType" [(ngModel)]="confirm_password" placeholder="Confirm password" name="confirmPassword" #confirmPassword="ngModel" required class="passwordInput">
+                <img src="../../assets/img/blue_eye.svg" alt="eye image" (click)="toggleConfirmPasswordVisibility()">
+            </div>
+            @if (!checkConfirmPassword() && confirmPassword.touched) {
+                <div class="invalidFeedback">
+                    @if (confirm_password == ''){
+                        <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Password is required</span>
+                    } @else if(!checkConfirmPassword()) {
+                        <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Password should have at least 5 characters</span>
+                    } 
+                </div>
+            }
+            @if (!checkEvenPasswords()) {
+                <div class="invalidFeedback">
+                    <span><img src="../../../../assets/img/warning.svg" alt="allertImg">Please check whether the passwords match</span>
+                </div>
+            }
+
+        </div>
+        <button type="submit" class="submitBtn" [ngClass]="{'submitBtn': checkAllInputs(), 'submitBtnDisabled': !checkAllInputs()}" [disabled]="!checkAllInputs()">Get started</button>
+    </form>
+    <app-footer></app-footer>
+</section>
+
